Allow photo deletion from visited stations

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -33,6 +33,10 @@
   "deleteAccount.confirm": "Willst du dein Konto dauerhaft löschen? Alle Daten werden entfernt.",
   "deleteAccount.cancel": "Abbrechen",
   "deleteAccount.delete": "Löschen",
+  "deletePhoto.title": "Foto löschen",
+  "deletePhoto.confirm": "Möchtest du dieses Foto löschen?",
+  "deletePhoto.cancel": "Abbrechen",
+  "deletePhoto.delete": "Löschen",
   "manualVisit.add": "Besuch manuell hinzufügen",
   "manualVisit.notePlaceholder": "Notiz (optional)",
   "manualVisit.addPhoto": "Foto hinzufügen",
