--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -33,6 +33,10 @@
   "deleteAccount.confirm": "Do you want to permanently delete your account? All data will be removed.",
   "deleteAccount.cancel": "Cancel",
   "deleteAccount.delete": "Delete",
+  "deletePhoto.title": "Delete photo",
+  "deletePhoto.confirm": "Do you want to delete this photo?",
+  "deletePhoto.cancel": "Cancel",
+  "deletePhoto.delete": "Delete",
   "manualVisit.add": "Add manual visit",
   "manualVisit.notePlaceholder": "Note (optional)",
   "manualVisit.addPhoto": "Add photo",
