--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -23,6 +23,8 @@
   "settings.account.delete": "Konto löschen",
   "settings.account.logout": "Logout",
   "settings.account.loggedInAs": "Angemeldet als",
+  "settings.account.profileLink": "Profil-Link",
+  "settings.account.copy": "Kopieren",
   "settings.language": "Sprache",
   "settings.language.de": "Deutsch",
   "settings.language.en": "Englisch",
@@ -66,5 +68,22 @@
   "station.visitedOn": "Besucht am",
   "station.notVisited": "Noch unbesucht",
   "station.note": "Notiz",
-  "station.maps": "Maps"
+  "station.maps": "Maps",
+  "profile.title": "Profil von {{username}}",
+  "profile.loading": "Lade …",
+  "profile.notFound": "Profil nicht gefunden.",
+  "profile.milestones": "Erreichte Meilensteine",
+  "profile.noMilestones": "Noch keine Meilensteine erreicht.",
+  "profile.visited": "Besuchte Bahnhöfe",
+  "profile.noneVisited": "Noch keine Bahnhöfe besucht.",
+  "profile.milestone.first": "1. Besuch",
+  "profile.milestone.firstDesc": "Erster besuchter Bahnhof",
+  "profile.milestone.hattrick": "Hattrick",
+  "profile.milestone.hattrickDesc": "3 besuchte Bahnhöfe",
+  "profile.milestone.almost": "Fast geschafft!",
+  "profile.milestone.almostDesc": "Nur noch 3 Bahnhöfe bis 100%",
+  "profile.milestone.allS": "100% S-Bahnhöfe",
+  "profile.milestone.allU": "100% U-Bahnhöfe",
+  "profile.milestone.allR": "100% Regionalbahnhöfe",
+  "profile.milestone.line": "Linie {{line}} komplett"
 }
