Add open profile link button with eye icon

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -25,6 +25,7 @@
   "settings.account.loggedInAs": "Angemeldet als",
   "settings.account.profileLink": "Profil-Link",
   "settings.account.copy": "Kopieren",
+  "settings.account.open": "Ansehen",
   "settings.language": "Sprache",
   "settings.language.de": "Deutsch",
   "settings.language.en": "Englisch",
