--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -25,6 +25,7 @@
   "settings.account.loggedInAs": "Logged in as",
   "settings.account.profileLink": "Profile link",
   "settings.account.copy": "Copy",
+  "settings.account.open": "Open",
   "settings.language": "Language",
   "settings.language.de": "German",
   "settings.language.en": "English",
